Added AWS SDK 2.x support module: tsc4j-aws2

--- a/settings.gradle
+++ b/settings.gradle
@@ -9,6 +9,7 @@ include "${rootProject.name}-bom"
 include "${rootProject.name}-core"
 include "${rootProject.name}-aws-common"
 include "${rootProject.name}-aws"
+include "${rootProject.name}-aws2"
 include "${rootProject.name}-gcp"
 include "${rootProject.name}-spring"
 include "spring-boot-starter-${rootProject.name}"
