--- a/build.gradle
+++ b/build.gradle
@@ -14,10 +14,12 @@ buildscript {
     slf4jVersion            = "1.7.28"
     lombokVersion           = "1.18.20"
     awsSdkVersion           = "1.11.475"
+    awsSdk2Version          = "2.17.98"
     guiceVersion            = "4.2.3"
     logbackVersion          = "1.2.3"
     jacksonVersion          = "2.9.9"
     picocliVersion          = "4.6.1"
+    httpClient4Version      = "4.5.13"
 
     micronautVersion        = "1.2.0"
     micronaut2Version       = "2.3.0"
@@ -71,6 +73,7 @@ allprojects {
   dependencyManagement {
     imports {
       mavenBom "com.amazonaws:aws-java-sdk-bom:${awsSdkVersion}"
+      mavenBom "software.amazon.awssdk:bom:${awsSdk2Version}"
       mavenBom "com.fasterxml.jackson:jackson-bom:${jacksonVersion}"
       mavenBom "com.google.cloud:google-cloud-bom:${googleCloudBomVersion}"
       mavenBom "org.spockframework:spock-bom:${spockVersion}"
@@ -91,6 +94,7 @@ allprojects {
       dependency "commons-io:commons-io:2.6"
       dependency "org.objenesis:objenesis:3.0.1"
       dependency "cglib:cglib-nodep:3.2.5"
+      dependency "org.apache.httpcomponents:httpclient:${httpClient4Version}"
 
       dependency "javax.inject:javax.inject:1"
 
