Added graalvm native-image build script with required infstructure.

--- a/tsc4j-cli/build.gradle
+++ b/tsc4j-cli/build.gradle
@@ -16,7 +16,7 @@ dependencies {
 
 compileJava {
   // for picocli-codegen
-  options.compilerArgs += ["-Aproject=${project.group}/${project.name}"]
+  options.compilerArgs += ["-Aproject=${project.group}/${project.name}-picocli"]
 }
 
 description = "Command line support"
