--- a/tsc4j-uberjar/src/main/resources/META-INF/native-image/com.github.tsc4j/tsc4j-uberjar/native-image.properties
+++ b/tsc4j-uberjar/src/main/resources/META-INF/native-image/com.github.tsc4j/tsc4j-uberjar/native-image.properties
@@ -1,13 +1,3 @@
-Args = \
-  -H:Name=tsc4j \
-  -H:Log=registerResource:verbose \
-  -H:+ReportExceptionStackTraces \
-  --allow-incomplete-classpath \
-  --initialize-at-build-time=com.sun.org.apache.xerces.internal.jaxp.SAXParserFactoryImpl \
-  --initialize-at-run-time=ch.qos.logback \
-  --enable-all-security-services \
-  --enable-http \
-  --enable-https \
-  --no-fallback \
-  --static
-
+#Args = \
+#  --initialize-at-build-time=com.sun.org.apache.xerces.internal.jaxp.SAXParserFactoryImpl \
+#  --initialize-at-run-time=ch.qos.logback,ch.qos.logback.core.ConsoleAppender
