[micronaut2]: allow @Property()-based overrides in tests

--- a/tsc4j-micronaut2/src/test/resources/application.conf
+++ b/tsc4j-micronaut2/src/test/resources/application.conf
@@ -29,5 +29,13 @@ foo {
   ]
 }
 
+props.hocon {
+  foo:  foo-hocon
+}
+
+props.common {
+  b:    common-b-hocon
+}
+
 # vim:syntax=hocon shiftwidth=2 softtabstop=2 expandtab
 # EOF
