Add AWS STS to a uberjar classpath and force inclusion into native image.

--- a/tsc4j-uberjar/build.gradle
+++ b/tsc4j-uberjar/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 
   // AWS platform support
   implementation          project(":${rootProject.name}-aws2")
+  implementation          "software.amazon.awssdk:sts"
 
   // credstash support
   //implementation          project(":${rootProject.name}-credstash")
