Gradle build update
* gradle update to `7.4.2`
* gradle plugin updates
* few dependency updates

--- a/gradle/aggregate-jacoco-reports.gradle
+++ b/gradle/aggregate-jacoco-reports.gradle
@@ -33,12 +33,12 @@ task codeCoverageReport(type: JacocoReport) {
   // enable the different report types (html, xml, csv)
   reports {
     xml {
-      enabled     true
+      required    = true
       destination file("${rootProject.buildDir}/jacoco/aggregated-code-coverage.xml")
     }
 
     html {
-      enabled     true
+      required    = true
       destination file("${rootProject.buildDir}/reports/jacoco")
     }
   }
