--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,9 @@
 buildscript {
   ext {
     groovyVersion           = "2.5.14"
-    groovy3Version          = "3.0.7"
+    groovy3Version          = "3.0.10"
     spockVersion            = "1.3-groovy-2.5"
-    spock2Version           = "2.0-M4-groovy-3.0"
+    spock2Version           = "2.1-groovy-3.0"
 
     typesafeConfigVersion   = "1.4.1"
 
@@ -16,10 +16,12 @@ buildscript {
     awsSdkVersion           = "1.11.475"
     awsSdk2Version          = "2.17.184"
     guiceVersion            = "4.2.3"
-    logbackVersion          = "1.2.3"
+    logbackVersion          = "1.2.11"
     jacksonVersion          = "2.9.9"
-    picocliVersion          = "4.6.1"
+    picocliVersion          = "4.6.3"
     httpClient4Version      = "4.5.13"
+    wiremockVersion         = "2.18.0"
+    s3MockVersion           = "0.2.5"
 
     micronautVersion        = "1.2.0"
     micronaut2Version       = "2.3.0"
@@ -30,7 +32,7 @@ buildscript {
     springBootVersion       = "2.1.0.RELEASE"
     springCloudVersion      = "Greenwich.SR2"
 
-    jacocoVersion           = "0.8.6"
+    jacocoVersion           = "0.8.8"
   }
 }
 
@@ -44,10 +46,9 @@ plugins {
   id  "ru.vyarus.pom"                       version "2.1.0"
   id  "io.freefair.lombok"                  version "5.3.0"
 
-  id  "com.adarshr.test-logger"             version "2.1.1" apply false
-  id  "com.github.johnrengelman.shadow"     version "6.1.0" apply false
-  id  "com.gorylenko.gradle-git-properties" version "2.2.4" apply false
-  id  "com.jfrog.bintray"                   version "1.8.5" apply false
+  id  "com.adarshr.test-logger"             version "3.2.0" apply false
+  id  "com.github.johnrengelman.shadow"     version "7.1.2" apply false
+  id  "com.gorylenko.gradle-git-properties" version "2.4.1" apply false
 }
 
 allprojects {
@@ -90,10 +91,11 @@ allprojects {
       dependency "co.wrisk.jcredstash:jcredstash:0.0.4"
       dependency "com.google.cloud:google-cloud-storage:${googleGcpVersion}"
 
-      dependency "org.apache.httpcomponents:httpclient:4.5.5"
       dependency "commons-io:commons-io:2.6"
       dependency "org.objenesis:objenesis:3.0.1"
       dependency "cglib:cglib-nodep:3.2.5"
+      dependency "com.github.tomakehurst:wiremock:${wiremockVersion}"
+      dependency "io.findify:s3mock_2.12:${s3MockVersion}"
       dependency "org.apache.httpcomponents:httpclient:${httpClient4Version}"
 
       dependency "javax.inject:javax.inject:1"
