--- a/tsc4j-aws2/build.gradle
+++ b/tsc4j-aws2/build.gradle
@@ -21,8 +21,8 @@ dependencies {
   // aws sdk1 implementation
   testImplementation      project(":${rootProject.name}-aws")
 
-  testImplementation      "io.findify:s3mock_2.12:0.2.5"
-  testImplementation      "org.apache.httpcomponents:httpclient:4.5.13"
+  testImplementation      "io.findify:s3mock_2.12"
+  testImplementation      "org.apache.httpcomponents:httpclient"
 }
 
 compileJava {
