--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
     typesafeConfigVersion   = "1.4.1"
 
     slf4jVersion            = "1.7.28"
-    lombokVersion           = "1.18.20"
+    lombokVersion           = "1.18.24"
     awsSdkVersion           = "1.11.475"
     awsSdk2Version          = "2.17.184"
     guiceVersion            = "4.2.3"
@@ -49,6 +49,8 @@ plugins {
   id  "com.adarshr.test-logger"             version "3.2.0" apply false
   id  "com.github.johnrengelman.shadow"     version "7.1.2" apply false
   id  "com.gorylenko.gradle-git-properties" version "2.4.1" apply false
+  id  "com.google.osdetector"               version "1.7.1"   apply false
+  id  "org.graalvm.buildtools.native"       version "0.9.19"  apply false
 }
 
 allprojects {
